<resources>
    <string name="app_name">SwayamEducation</string>

    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_create_new_account">Create New Account</string>
    <string name="lbl_log_in">Log In</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_phone_no">Phone Number</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_logout">Logout</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="what_do_you_want_learn">What do you want learn ?</string>
    <string name="lbl_overview">Overview</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_faq">FAQ</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="hint_admission_number">Adminission Number</string>
    <string name="hint_aadhaar_number">Aadhaar Number</string>
    <string name="hint_class_group">Class Group</string>
    <string name="hint_enrollment_code">Enrollment Code</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_blood_group">Blood Group</string>
    <string name="hint_mother_name">Mother Name</string>
    <string name="hint_mother_contact_no">Mother Contact No</string>
    <string name="hint_father_name">Father Name</string>
    <string name="hint_father_contact_no">Father Contact No</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_address">Address</string>
    <string name="hint_primary_contact">Primary Contact</string>
    <string name="hint_emergency_contact">Emergency Contact</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_marital_status">Marital Status</string>
    <string name="hint_experience">Experience</string>
    <string name="hint_core_strength">Core Strength</string>
    <string name="hint_extra_notes">Extra Notes</string>
    <string name="i_am_saller">I am Admin</string>
    <string name="i_am_teacher">I am Teacher</string>
    <string name="i_am_student">I am Student</string>
    <string name="i_am_parent">I am Parent</string>
    <string name="attendance">Attendance</string>
    <string name="lbl_attendance">Attendance</string>
    <string name="lbl_persent">Present</string>
    <string name="lbl_absent">Absent</string>
    <string name="lbl_leave">Leave</string>
    <string name="student">Student</string>
    <string name="lbl_students">Students</string>
    <string name="lbl_add_students">Add Students</string>
    <string name="lbl_roll_no">Roll No</string>
    <string name="lbl_student_login_user_name">Student Login User Name</string>
    <string name="lbl_student_birthday">Student Birthday</string>
    <string name="lbl_student_address">Student Address</string>
    <string name="lbl_student_city">Student City</string>
    <string name="lbl_primary_contact">Primary Contact</string>
    <string name="lbl_emergency_contact">Emergency Contact</string>
    <string name="lbl_student_email">Student Email</string>
    <string name="lbl_student_branch">Student Branch</string>
    <string name="lbl_student_semester">Student Semester</string>
    <string name="lbl_blood_group">Blood Group</string>
    <string name="lbl_food_allergy">Food Allergy</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_password">Password</string>

    <string name="mobile_error">Please enter your mobile no</string>
    <string name="mobile_lenght_error">Please mobile number lenght should be 10 digits</string>
    <string name="password_error">Please enter your password</string>
    <string name="password_lenght_error">Please password should be 4 to 10 digits</string>
    <string name="holiday">Holiday</string>
    <string name="teacher">Teacher</string>
    <string name="lbl_teacher">Teacher</string>
    <string name="lbl_holiday">Holiday</string>
    <string name="lbl_notification">Notification</string>
    <string name="hint_school_name">School Name</string>
    <string name="hint_father_email">Father Email</string>
    <string name="hint_mother_email">Mother Email</string>
    <string name="hint_mother_contact">Mother Contact</string>
    <string name="hint_father_contact">Father Contact</string>
    <string name="hint_standard">Standard</string>
    <string name="subject_teacher">Subject Teacher</string>
    <string name="lbl_subject_teacher">Teacher Standard Subject</string>
    <string name="lbl_select_subject_teacher">Select Subject Teacher</string>
    <string name="lbl_selected_subject">Selected Subject   : </string>
    <string name="lbl_add_subject">Add Subject</string>
    <string name="lbl_selected_class">Selected Standard</string>
    <string name="lbl_add_class">Add Standard</string>
    <string name="lbl_select_chapter">Select Chapter</string>
    <string name="lbl_select_subject">Select Subject</string>
    <string name="lbl_select_standard">Select Standard</string>
    <string name="lbl_teacher_name">Teacher name</string>
    <string name="lbl_assign_subject">Assign Subject</string>
    <string name="lbl_home_work">Home Work</string>
    <string name="assign_hw_date">Assign Home Work Date</string>
    <string name="submission_hw_date">Submission Date</string>
    <string name="homework">Homework</string>
    <string name="lbl_complete">Complete</string>
    <string name="lbl_incomplete">In Complete</string>
    <string name="comment">Comment</string>
    <string name="lbl_add_homework">Add Home Work</string>
    <string name="lbl_add_home_work">Add Home Work</string>
    <string name="lbl_edit_home_work">Edit Home Work</string>
    <string name="home_work_date">Home Work Date</string>
    <string name="submission_date">Submission Date</string>
    <string name="fill_attach">Fill Attach</string>
    <string name="description">Description</string>
    <string name="lbl_time_table">Time Table</string>
    <string name="subject">Subject  : </string>
    <string name="time">Time  : </string>
    <string name="room_number">Room Number  : </string>
    <string name="teacher_lbl">Teacher  :</string>
    <string name="lbl_monday">Monday</string>
    <string name="lbl_tuesday">Tuesday</string>
    <string name="time_table">Time Table</string>
    <string name="lbl_add_time_table">Add Time Table</string>
    <string name="time_from">Time From</string>
    <string name="time_to">Time To</string>
    <string name="room_no">Room No</string>
    <string name="teacher_time_table">Teacher Time Table</string>
    <string name="class_time_table">Class Time Table</string>
    <string name="lbl_marks_as_holiday">Marks As Holiday</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="delete_mes">Are you sure you want to delete this data ?</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="hint_selected_file">File is Selected</string>
    <string name="lbl_wednesday">Wednesday</string>
    <string name="lbl_thursday">Thursday</string>
    <string name="lbl_friday">Friday</string>
    <string name="lbl_saturday">Saturday</string>
    <string name="lbl_sunday">Sunday</string>
    <string name="lbl_solt1">Period 1</string>
    <string name="lbl_solt2">Period 2</string>
    <string name="lbl_solt3">Period 3</string>
    <string name="lbl_solt4">Period 4</string>
    <string name="lbl_solt5">Period 5</string>
    <string name="lbl_solt6">Period 6</string>
    <string name="lbl_edit_holiday">Edit Holiday</string>
    <string name="holiday_date">Holiday Date</string>
    <string name="edit_standards">Edit Standards</string>
    <string name="manage_fees">Manage Fees</string>
    <string name="create_subjects">Create Subjects</string>
    <string name="staff">Manage Staff</string>
    <string name="user_list">User List</string>
    <string name="homework_entry">Homework Entry</string>
    <string name="exam_result">Exam Result</string>
    <string name="meassge">Message</string>
    <string name="track_location">Track Location</string>
    <string name="gallery">Gallery</string>
    <string name="create_class">Create Class</string>
    <string name="teacher_subject">Teacher Subject</string>
    <string name="change_class">Change Class</string>
    <string name="manage_student">Manage Student</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="update_infor">Update Information</string>
    <string name="lbl_assign_standard_subject">Assign Standard Subject</string>
    <string name="current_class">Current Class</string>
    <string name="effective_date">Effective Date</string>

    ---------------error mes ----------------------
    <string name="standard_id_error">Please select standard</string>
    <string name="subject_id_error">Please select subject</string>
    <string name="teacher_id_error">Please select teacher</string>
    <string name="days_error">Please select days</string>
    <string name="periods_error">Please select periods</string>
    <string name="holiday_date_error">Please select holiday date</string>
    <string name="desc_error">Please enter discription</string>
    <string name="current_class_error">Please enter current class</string>
    <string name="student_id_error">Please select student</string>
    <string name="effective_error">Please enter effective date</string>
    <string name="lbl_edit_student_info">Edit Student Information</string>
    <string name="lbl_student_name">Student Name</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_login_user_name">Login User Name</string>
    <string name="student_name_error">Please enter student name</string>
    <string name="date_of_birth_error">Please Select Date Of Birth</string>
    <string name="login_user_name_error">Please enter login user name</string>
    <string name="home_work_date_error">Please enter home work date</string>
    <string name="submission_date_error">Please enter submission date</string>
    <string name="present">Present</string>
    <string name="class_diary">Class Diary</string>
    <string name="lbl_enter_class_diary">Enter Class Diary</string>
    <string name="lbl_view_class_diary">View Class Diary</string>
    <string name="lbl_add_class_diary">Add Class Diary</string>
    <string name="current_date">Current Date</string>
    <string name="select_standard">Select Standard</string>
    <string name="select_subject">Select Subject</string>
    <string name="task_detail">Task Detail</string>
    <string name="upload_file">Upload File</string>
    <string name="lbl_add_gallery">Add Gallery</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="select_student">Select Student</string>
    <string name="form_date">From Date</string>
    <string name="select_class">Select Class</string>
    <string name="student_name">Student Name</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="select_day">Select Day</string>
    <string name="select_periods">Select Periods</string>
    <string name="intro_header1">Lorem ipsum dummy text Amite</string>
    <string name="intro_header2">Lorem ipsum dummy text</string>
    <string name="intro_header3">Lorem ipsum dummy text Amite</string>

</resources>