<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="user"
            type="com.sngs.swayam.edu.data.model.LoginUser"/>
        <variable name="viewmodel"
            type="com.sngs.swayam.edu.ui.login.viewmodel.LoginViewModel"/>
        <variable
            name="handlers"
            type="com.sngs.swayam.edu.ui.login.handler.LoginHandler" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/header_rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/circle_img"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/circle_shape_1"
                android:layout_marginTop="@dimen/_minus30sdp"
                android:layout_marginLeft="@dimen/_minus10sdp"/>

            <ImageView
                android:id="@+id/circle_img2"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/circle_shape_2"
                android:layout_marginTop="@dimen/_minus50sdp"
                android:layout_marginLeft="@dimen/_40sdp"/>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_rel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_20sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_240sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/_10sdp"
                        app:cardElevation="@dimen/_10sdp"
                        android:padding="@dimen/_8sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/_20sdp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:fontFamily="@font/poppins_medium"
                                android:textSize="@dimen/text_18"
                                android:text="@string/lbl_sign_in"
                                android:layout_marginTop="@dimen/_10sdp" />

                            <EditText
                                android:id="@+id/et_phone"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_35sdp"
                                android:background="@drawable/btn_shape_border"
                                android:textColor="@color/txt_gray"
                                android:gravity="center_vertical"
                                android:singleLine="true"
                                android:inputType="number"
                                android:maxLength="10"
                                android:text="@={user.email}"
                                android:paddingLeft="@dimen/_20sdp"
                                android:paddingRight="@dimen/_10sdp"
                                android:drawableLeft="@drawable/ic_call"
                                android:drawablePadding="@dimen/_10sdp"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="@dimen/text_14"
                                android:hint="@string/lbl_phone_no"
                                android:layout_marginTop="@dimen/_20sdp" />

                            <TextView
                                android:id="@+id/phone_error_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/red"
                                android:paddingLeft="@dimen/_10sdp"
                                android:paddingRight="@dimen/_10sdp"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="@dimen/text_12" />


                            <EditText
                                android:id="@+id/et_pwd"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_35sdp"
                                android:background="@drawable/btn_shape_border"
                                android:textColor="@color/txt_gray"
                                android:gravity="center_vertical"
                                android:paddingLeft="@dimen/_20sdp"
                                android:paddingRight="@dimen/_10sdp"
                                android:drawableLeft="@drawable/ic_pwd"
                                android:text="@={user.pwd}"
                                android:drawablePadding="@dimen/_10sdp"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="@dimen/text_14"
                                android:hint="@string/lbl_password"
                                android:inputType="textPassword"
                                android:singleLine="true"
                                android:layout_marginTop="@dimen/_20sdp" />


                            <TextView
                                android:id="@+id/pwd_error_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/red"
                                android:paddingLeft="@dimen/_10sdp"
                                android:paddingRight="@dimen/_10sdp"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="@dimen/text_12" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/btn_log_in"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/btn_shape"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:onClick="@{(v) -> handlers.login(v, viewmodel,user)}"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/text_14"
                        android:text="@string/lbl_log_in"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>