<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.attendance.view.StudentAttendanceActivity">

    <data>
        <import type="android.view.View"/>
      <!--  <variable name="standard"
            type="com.sngs.swayam.edu.data.model.Standard"/>-->
        <variable
            name="handler"
            type="com.sngs.swayam.edu.ui.attendance.handler.StudentHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:id="@+id/header_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btn_back_in"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/back_btn_shape"
                    android:src="@drawable/ic_back_arrow"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:paddingLeft="@dimen/_20sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_minus20sdp"
                    app:tint="@color/white"
                    android:onClick="@{(v) -> handler.onBackClick(v)}"/>

                <TextView
                    android:id="@+id/header_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/text_18"
                    android:text="@string/lbl_attendance"
                    android:layout_marginTop="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/btn_add_attendance"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/right_back_btn_shape"
                    android:src="@drawable/ic_plus"
                    android:paddingTop="@dimen/_5sdp"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_minus20sdp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/filter_li"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/header_rel"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp">

                //select_standard
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/text_12"
                    android:text="@string/select_standard"
                    android:layout_marginTop="@dimen/_10sdp" />

                <RelativeLayout
                    android:id="@+id/select_standard_rel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/square_btn">

                    <Spinner
                        android:id="@+id/select_standard_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                        <!--tools:setOnItemSelectedListener="@{(v) -> handler.onStandardClick(v,standard)}"-->

                </RelativeLayout>

                //select_student
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/text_12"
                    android:text="@string/select_student"
                    android:layout_marginTop="@dimen/_10sdp" />

                <RelativeLayout
                    android:id="@+id/select_student_rel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/square_btn"
                    android:layout_marginTop="@dimen/_4sdp">

                    <Spinner
                        android:id="@+id/select_student_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_toLeftOf="@+id/find_fab">

                        //form_date
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_marginRight="@dimen/_5sdp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:gravity="center_vertical"
                                android:layout_centerHorizontal="true"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="@dimen/text_12"
                                android:text="@string/form_date" />

                            <EditText
                                android:id="@+id/from_date_txt"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@drawable/square_btn"
                                android:fontFamily="@font/poppins_regular"
                                android:padding="@dimen/_4sdp"
                                android:gravity="center_vertical"
                                android:singleLine="true"
                                android:focusableInTouchMode="false"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_14"
                                android:onClick="@{(v) -> handler.onDatepicker(v,0)}"/>

                        </LinearLayout>

                        //to date
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_marginLeft="@dimen/_5sdp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:gravity="center_vertical"
                                android:layout_centerHorizontal="true"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="@dimen/text_12"
                                android:text="@string/to_date" />

                            <EditText
                                android:id="@+id/to_date_txt"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@drawable/square_btn"
                                android:fontFamily="@font/poppins_regular"
                                android:padding="@dimen/_4sdp"
                                android:gravity="center_vertical"
                                android:singleLine="true"
                                android:focusableInTouchMode="false"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_14" />

                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/find_fab"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/circle_shape_2"
                        android:padding="@dimen/_10sdp"
                        android:src="@drawable/ic_serach"
                        app:tint="@color/white"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/_10sdp"/>

                </RelativeLayout>

            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_below="@+id/filter_li">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/subject_rv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_70sdp"
                                android:layout_marginTop="@dimen/_10sdp"/>

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/attendance_rv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"/>

                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <include layout="@layout/loading_layout"/>

            <include layout="@layout/date_picker_layout"/>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>